# friendly_hash

./: README.md  pyproject.toml  requirements.txt
friendly_hash/: friendly_hash.py
